fixed some design bugs on smaller screen size

--- a/styles/style.css
+++ b/styles/style.css
@@ -164,7 +164,7 @@ h1 {
   position: absolute;
   left: 0%;
 
-  width: 102%;
+  width: 100%;
   max-height: 20%;
   z-index: 1;
 
